internal/common/data/filterable/filterable_ast.go
package filterable

// Code generated by peg -output internal/common/data/filterable/filterable_ast.go internal/common/data/filterable/filterable.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleF
	ruleExprList
	ruleExpr
	ruleAtomExpr
	ruleNotExpr
	ruleAndExpr
	ruleOrExpr
	ruleEqExpr
	ruleNeExpr
	ruleLtExpr
	ruleGtExpr
	ruleLteExpr
	ruleGteExpr
	ruleInExpr
	ruleStwExpr
	ruleBtwExpr
	ruleCtnExpr
	ruleIdentifier
	ruleIdentStart
	ruleIdentCont
	ruleLiteral
	ruleLiteralList
	ruleStringLiteral
	ruleEscape
	ruleOctalEscape
	ruleUnicodeEscape
	ruleNumLiteral
	ruleDigits
	ruleHexDigit
	ruleNOT
	ruleAND
	ruleOR
	ruleEQ
	ruleNE
	ruleLT
	ruleGT
	ruleIN
	ruleLTE
	ruleGTE
	ruleBTW
	ruleSTW
	ruleCTN
	ruleLPAR
	ruleRPAR
	ruleCOMMA
	ruleSpacing
	ruleEOT
	rulePegText
)

var rul3s = [...]string{
	"Unknown",
	"F",
	"ExprList",
	"Expr",
	"AtomExpr",
	"NotExpr",
	"AndExpr",
	"OrExpr",
	"EqExpr",
	"NeExpr",
	"LtExpr",
	"GtExpr",
	"LteExpr",
	"GteExpr",
	"InExpr",
	"StwExpr",
	"BtwExpr",
	"CtnExpr",
	"Identifier",
	"IdentStart",
	"IdentCont",
	"Literal",
	"LiteralList",
	"StringLiteral",
	"Escape",
	"OctalEscape",
	"UnicodeEscape",
	"NumLiteral",
	"Digits",
	"HexDigit",
	"NOT",
	"AND",
	"OR",
	"EQ",
	"NE",
	"LT",
	"GT",
	"IN",
	"LTE",
	"GTE",
	"BTW",
	"STW",
	"CTN",
	"LPAR",
	"RPAR",
	"COMMA",
	"Spacing",
	"EOT",
	"PegText",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type FilterAST struct {
	Buffer string
	buffer []rune
	rules  [49]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *FilterAST) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *FilterAST) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *FilterAST
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *FilterAST) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *FilterAST) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func (p *FilterAST) SprintSyntaxTree() string {
	var bldr strings.Builder
	p.WriteSyntaxTree(&bldr)
	return bldr.String()
}

func Pretty(pretty bool) func(*FilterAST) error {
	return func(p *FilterAST) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*FilterAST) error {
	return func(p *FilterAST) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *FilterAST) Init(options ...func(*FilterAST) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 F <- <(Spacing Expr EOT)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				if !_rules[ruleSpacing]() {
					goto l0
				}
				if !_rules[ruleExpr]() {
					goto l0
				}
				if !_rules[ruleEOT]() {
					goto l0
				}
				add(ruleF, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 ExprList <- <(Expr (COMMA Spacing Expr)+)> */
		func() bool {
			position2, tokenIndex2 := position, tokenIndex
			{
				position3 := position
				if !_rules[ruleExpr]() {
					goto l2
				}
				if !_rules[ruleCOMMA]() {
					goto l2
				}
				if !_rules[ruleSpacing]() {
					goto l2
				}
				if !_rules[ruleExpr]() {
					goto l2
				}
			l4:
				{
					position5, tokenIndex5 := position, tokenIndex
					if !_rules[ruleCOMMA]() {
						goto l5
					}
					if !_rules[ruleSpacing]() {
						goto l5
					}
					if !_rules[ruleExpr]() {
						goto l5
					}
					goto l4
				l5:
					position, tokenIndex = position5, tokenIndex5
				}
				add(ruleExprList, position3)
			}
			return true
		l2:
			position, tokenIndex = position2, tokenIndex2
			return false
		},
		/* 2 Expr <- <((NotExpr / AndExpr / OrExpr / AtomExpr) Spacing)> */
		func() bool {
			position6, tokenIndex6 := position, tokenIndex
			{
				position7 := position
				{
					position8, tokenIndex8 := position, tokenIndex
					if !_rules[ruleNotExpr]() {
						goto l9
					}
					goto l8
				l9:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleAndExpr]() {
						goto l10
					}
					goto l8
				l10:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleOrExpr]() {
						goto l11
					}
					goto l8
				l11:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleAtomExpr]() {
						goto l6
					}
				}
			l8:
				if !_rules[ruleSpacing]() {
					goto l6
				}
				add(ruleExpr, position7)
			}
			return true
		l6:
			position, tokenIndex = position6, tokenIndex6
			return false
		},
		/* 3 AtomExpr <- <((EqExpr / NeExpr / LtExpr / GtExpr / LteExpr / GteExpr / InExpr / StwExpr / BtwExpr / CtnExpr / ) Spacing)> */
		func() bool {
			position12, tokenIndex12 := position, tokenIndex
			{
				position13 := position
				{
					position14, tokenIndex14 := position, tokenIndex
					if !_rules[ruleEqExpr]() {
						goto l15
					}
					goto l14
				l15:
					position, tokenIndex = position14, tokenIndex14
					if !_rules[ruleNeExpr]() {
						goto l16
					}
					goto l14
				l16:
					position, tokenIndex = position14, tokenIndex14
					if !_rules[ruleLtExpr]() {
						goto l17
					}
					goto l14
				l17:
					position, tokenIndex = position14, tokenIndex14
					if !_rules[ruleGtExpr]() {
						goto l18
					}
					goto l14
				l18:
					position, tokenIndex = position14, tokenIndex14
					if !_rules[ruleLteExpr]() {
						goto l19
					}
					goto l14
				l19:
					position, tokenIndex = position14, tokenIndex14
					if !_rules[ruleGteExpr]() {
						goto l20
					}
					goto l14
				l20:
					position, tokenIndex = position14, tokenIndex14
					if !_rules[ruleInExpr]() {
						goto l21
					}
					goto l14
				l21:
					position, tokenIndex = position14, tokenIndex14
					if !_rules[ruleStwExpr]() {
						goto l22
					}
					goto l14
				l22:
					position, tokenIndex = position14, tokenIndex14
					if !_rules[ruleBtwExpr]() {
						goto l23
					}
					goto l14
				l23:
					position, tokenIndex = position14, tokenIndex14
					if !_rules[ruleCtnExpr]() {
						goto l24
					}
					goto l14
				l24:
					position, tokenIndex = position14, tokenIndex14
				}
			l14:
				if !_rules[ruleSpacing]() {
					goto l12
				}
				add(ruleAtomExpr, position13)
			}
			return true
		l12:
			position, tokenIndex = position12, tokenIndex12
			return false
		},
		/* 4 NotExpr <- <(NOT LPAR Expr RPAR)> */
		func() bool {
			position25, tokenIndex25 := position, tokenIndex
			{
				position26 := position
				if !_rules[ruleNOT]() {
					goto l25
				}
				if !_rules[ruleLPAR]() {
					goto l25
				}
				if !_rules[ruleExpr]() {
					goto l25
				}
				if !_rules[ruleRPAR]() {
					goto l25
				}
				add(ruleNotExpr, position26)
			}
			return true
		l25:
			position, tokenIndex = position25, tokenIndex25
			return false
		},
		/* 5 AndExpr <- <(AND LPAR ExprList RPAR)> */
		func() bool {
			position27, tokenIndex27 := position, tokenIndex
			{
				position28 := position
				if !_rules[ruleAND]() {
					goto l27
				}
				if !_rules[ruleLPAR]() {
					goto l27
				}
				if !_rules[ruleExprList]() {
					goto l27
				}
				if !_rules[ruleRPAR]() {
					goto l27
				}
				add(ruleAndExpr, position28)
			}
			return true
		l27:
			position, tokenIndex = position27, tokenIndex27
			return false
		},
		/* 6 OrExpr <- <(OR LPAR ExprList RPAR)> */
		func() bool {
			position29, tokenIndex29 := position, tokenIndex
			{
				position30 := position
				if !_rules[ruleOR]() {
					goto l29
				}
				if !_rules[ruleLPAR]() {
					goto l29
				}
				if !_rules[ruleExprList]() {
					goto l29
				}
				if !_rules[ruleRPAR]() {
					goto l29
				}
				add(ruleOrExpr, position30)
			}
			return true
		l29:
			position, tokenIndex = position29, tokenIndex29
			return false
		},
		/* 7 EqExpr <- <(EQ LPAR Identifier COMMA Literal RPAR)> */
		func() bool {
			position31, tokenIndex31 := position, tokenIndex
			{
				position32 := position
				if !_rules[ruleEQ]() {
					goto l31
				}
				if !_rules[ruleLPAR]() {
					goto l31
				}
				if !_rules[ruleIdentifier]() {
					goto l31
				}
				if !_rules[ruleCOMMA]() {
					goto l31
				}
				if !_rules[ruleLiteral]() {
					goto l31
				}
				if !_rules[ruleRPAR]() {
					goto l31
				}
				add(ruleEqExpr, position32)
			}
			return true
		l31:
			position, tokenIndex = position31, tokenIndex31
			return false
		},
		/* 8 NeExpr <- <(NE LPAR Identifier COMMA Literal RPAR)> */
		func() bool {
			position33, tokenIndex33 := position, tokenIndex
			{
				position34 := position
				if !_rules[ruleNE]() {
					goto l33
				}
				if !_rules[ruleLPAR]() {
					goto l33
				}
				if !_rules[ruleIdentifier]() {
					goto l33
				}
				if !_rules[ruleCOMMA]() {
					goto l33
				}
				if !_rules[ruleLiteral]() {
					goto l33
				}
				if !_rules[ruleRPAR]() {
					goto l33
				}
				add(ruleNeExpr, position34)
			}
			return true
		l33:
			position, tokenIndex = position33, tokenIndex33
			return false
		},
		/* 9 LtExpr <- <(LT LPAR Identifier COMMA Literal RPAR)> */
		func() bool {
			position35, tokenIndex35 := position, tokenIndex
			{
				position36 := position
				if !_rules[ruleLT]() {
					goto l35
				}
				if !_rules[ruleLPAR]() {
					goto l35
				}
				if !_rules[ruleIdentifier]() {
					goto l35
				}
				if !_rules[ruleCOMMA]() {
					goto l35
				}
				if !_rules[ruleLiteral]() {
					goto l35
				}
				if !_rules[ruleRPAR]() {
					goto l35
				}
				add(ruleLtExpr, position36)
			}
			return true
		l35:
			position, tokenIndex = position35, tokenIndex35
			return false
		},
		/* 10 GtExpr <- <(GT LPAR Identifier COMMA Literal RPAR)> */
		func() bool {
			position37, tokenIndex37 := position, tokenIndex
			{
				position38 := position
				if !_rules[ruleGT]() {
					goto l37
				}
				if !_rules[ruleLPAR]() {
					goto l37
				}
				if !_rules[ruleIdentifier]() {
					goto l37
				}
				if !_rules[ruleCOMMA]() {
					goto l37
				}
				if !_rules[ruleLiteral]() {
					goto l37
				}
				if !_rules[ruleRPAR]() {
					goto l37
				}
				add(ruleGtExpr, position38)
			}
			return true
		l37:
			position, tokenIndex = position37, tokenIndex37
			return false
		},
		/* 11 LteExpr <- <(LTE LPAR Identifier COMMA Literal RPAR)> */
		func() bool {
			position39, tokenIndex39 := position, tokenIndex
			{
				position40 := position
				if !_rules[ruleLTE]() {
					goto l39
				}
				if !_rules[ruleLPAR]() {
					goto l39
				}
				if !_rules[ruleIdentifier]() {
					goto l39
				}
				if !_rules[ruleCOMMA]() {
					goto l39
				}
				if !_rules[ruleLiteral]() {
					goto l39
				}
				if !_rules[ruleRPAR]() {
					goto l39
				}
				add(ruleLteExpr, position40)
			}
			return true
		l39:
			position, tokenIndex = position39, tokenIndex39
			return false
		},
		/* 12 GteExpr <- <(GTE LPAR Identifier COMMA Literal RPAR)> */
		func() bool {
			position41, tokenIndex41 := position, tokenIndex
			{
				position42 := position
				if !_rules[ruleGTE]() {
					goto l41
				}
				if !_rules[ruleLPAR]() {
					goto l41
				}
				if !_rules[ruleIdentifier]() {
					goto l41
				}
				if !_rules[ruleCOMMA]() {
					goto l41
				}
				if !_rules[ruleLiteral]() {
					goto l41
				}
				if !_rules[ruleRPAR]() {
					goto l41
				}
				add(ruleGteExpr, position42)
			}
			return true
		l41:
			position, tokenIndex = position41, tokenIndex41
			return false
		},
		/* 13 InExpr <- <(IN LPAR Identifier COMMA LiteralList RPAR)> */
		func() bool {
			position43, tokenIndex43 := position, tokenIndex
			{
				position44 := position
				if !_rules[ruleIN]() {
					goto l43
				}
				if !_rules[ruleLPAR]() {
					goto l43
				}
				if !_rules[ruleIdentifier]() {
					goto l43
				}
				if !_rules[ruleCOMMA]() {
					goto l43
				}
				if !_rules[ruleLiteralList]() {
					goto l43
				}
				if !_rules[ruleRPAR]() {
					goto l43
				}
				add(ruleInExpr, position44)
			}
			return true
		l43:
			position, tokenIndex = position43, tokenIndex43
			return false
		},
		/* 14 StwExpr <- <(STW LPAR Identifier COMMA Literal RPAR)> */
		func() bool {
			position45, tokenIndex45 := position, tokenIndex
			{
				position46 := position
				if !_rules[ruleSTW]() {
					goto l45
				}
				if !_rules[ruleLPAR]() {
					goto l45
				}
				if !_rules[ruleIdentifier]() {
					goto l45
				}
				if !_rules[ruleCOMMA]() {
					goto l45
				}
				if !_rules[ruleLiteral]() {
					goto l45
				}
				if !_rules[ruleRPAR]() {
					goto l45
				}
				add(ruleStwExpr, position46)
			}
			return true
		l45:
			position, tokenIndex = position45, tokenIndex45
			return false
		},
		/* 15 BtwExpr <- <(BTW LPAR Identifier COMMA Literal COMMA Literal RPAR)> */
		func() bool {
			position47, tokenIndex47 := position, tokenIndex
			{
				position48 := position
				if !_rules[ruleBTW]() {
					goto l47
				}
				if !_rules[ruleLPAR]() {
					goto l47
				}
				if !_rules[ruleIdentifier]() {
					goto l47
				}
				if !_rules[ruleCOMMA]() {
					goto l47
				}
				if !_rules[ruleLiteral]() {
					goto l47
				}
				if !_rules[ruleCOMMA]() {
					goto l47
				}
				if !_rules[ruleLiteral]() {
					goto l47
				}
				if !_rules[ruleRPAR]() {
					goto l47
				}
				add(ruleBtwExpr, position48)
			}
			return true
		l47:
			position, tokenIndex = position47, tokenIndex47
			return false
		},
		/* 16 CtnExpr <- <(CTN LPAR Identifier COMMA Literal RPAR)> */
		func() bool {
			position49, tokenIndex49 := position, tokenIndex
			{
				position50 := position
				if !_rules[ruleCTN]() {
					goto l49
				}
				if !_rules[ruleLPAR]() {
					goto l49
				}
				if !_rules[ruleIdentifier]() {
					goto l49
				}
				if !_rules[ruleCOMMA]() {
					goto l49
				}
				if !_rules[ruleLiteral]() {
					goto l49
				}
				if !_rules[ruleRPAR]() {
					goto l49
				}
				add(ruleCtnExpr, position50)
			}
			return true
		l49:
			position, tokenIndex = position49, tokenIndex49
			return false
		},
		/* 17 Identifier <- <(<(IdentStart IdentCont*)> Spacing)> */
		func() bool {
			position51, tokenIndex51 := position, tokenIndex
			{
				position52 := position
				{
					position53 := position
					if !_rules[ruleIdentStart]() {
						goto l51
					}
				l54:
					{
						position55, tokenIndex55 := position, tokenIndex
						if !_rules[ruleIdentCont]() {
							goto l55
						}
						goto l54
					l55:
						position, tokenIndex = position55, tokenIndex55
					}
					add(rulePegText, position53)
				}
				if !_rules[ruleSpacing]() {
					goto l51
				}
				add(ruleIdentifier, position52)
			}
			return true
		l51:
			position, tokenIndex = position51, tokenIndex51
			return false
		},
		/* 18 IdentStart <- <([a-z] / [A-Z] / '_')> */
		func() bool {
			position56, tokenIndex56 := position, tokenIndex
			{
				position57 := position
				{
					position58, tokenIndex58 := position, tokenIndex
					if c := buffer[position]; c < rune('a') || c > rune('z') {
						goto l59
					}
					position++
					goto l58
				l59:
					position, tokenIndex = position58, tokenIndex58
					if c := buffer[position]; c < rune('A') || c > rune('Z') {
						goto l60
					}
					position++
					goto l58
				l60:
					position, tokenIndex = position58, tokenIndex58
					if buffer[position] != rune('_') {
						goto l56
					}
					position++
				}
			l58:
				add(ruleIdentStart, position57)
			}
			return true
		l56:
			position, tokenIndex = position56, tokenIndex56
			return false
		},
		/* 19 IdentCont <- <(IdentStart / [0-9])> */
		func() bool {
			position61, tokenIndex61 := position, tokenIndex
			{
				position62 := position
				{
					position63, tokenIndex63 := position, tokenIndex
					if !_rules[ruleIdentStart]() {
						goto l64
					}
					goto l63
				l64:
					position, tokenIndex = position63, tokenIndex63
					if c := buffer[position]; c < rune('0') || c > rune('9') {
						goto l61
					}
					position++
				}
			l63:
				add(ruleIdentCont, position62)
			}
			return true
		l61:
			position, tokenIndex = position61, tokenIndex61
			return false
		},
		/* 20 Literal <- <((StringLiteral / NumLiteral) Spacing)> */
		func() bool {
			position65, tokenIndex65 := position, tokenIndex
			{
				position66 := position
				{
					position67, tokenIndex67 := position, tokenIndex
					if !_rules[ruleStringLiteral]() {
						goto l68
					}
					goto l67
				l68:
					position, tokenIndex = position67, tokenIndex67
					if !_rules[ruleNumLiteral]() {
						goto l65
					}
				}
			l67:
				if !_rules[ruleSpacing]() {
					goto l65
				}
				add(ruleLiteral, position66)
			}
			return true
		l65:
			position, tokenIndex = position65, tokenIndex65
			return false
		},
		/* 21 LiteralList <- <(Literal (COMMA Spacing Literal)+)> */
		func() bool {
			position69, tokenIndex69 := position, tokenIndex
			{
				position70 := position
				if !_rules[ruleLiteral]() {
					goto l69
				}
				if !_rules[ruleCOMMA]() {
					goto l69
				}
				if !_rules[ruleSpacing]() {
					goto l69
				}
				if !_rules[ruleLiteral]() {
					goto l69
				}
			l71:
				{
					position72, tokenIndex72 := position, tokenIndex
					if !_rules[ruleCOMMA]() {
						goto l72
					}
					if !_rules[ruleSpacing]() {
						goto l72
					}
					if !_rules[ruleLiteral]() {
						goto l72
					}
					goto l71
				l72:
					position, tokenIndex = position72, tokenIndex72
				}
				add(ruleLiteralList, position70)
			}
			return true
		l69:
			position, tokenIndex = position69, tokenIndex69
			return false
		},
		/* 22 StringLiteral <- <('"' (Escape / (!('"' / '\\' / '\n' / '\r') .))* '"')> */
		func() bool {
			position73, tokenIndex73 := position, tokenIndex
			{
				position74 := position
				if buffer[position] != rune('"') {
					goto l73
				}
				position++
			l75:
				{
					position76, tokenIndex76 := position, tokenIndex
					{
						position77, tokenIndex77 := position, tokenIndex
						if !_rules[ruleEscape]() {
							goto l78
						}
						goto l77
					l78:
						position, tokenIndex = position77, tokenIndex77
						{
							position79, tokenIndex79 := position, tokenIndex
							{
								position80, tokenIndex80 := position, tokenIndex
								if buffer[position] != rune('"') {
									goto l81
								}
								position++
								goto l80
							l81:
								position, tokenIndex = position80, tokenIndex80
								if buffer[position] != rune('\\') {
									goto l82
								}
								position++
								goto l80
							l82:
								position, tokenIndex = position80, tokenIndex80
								if buffer[position] != rune('\n') {
									goto l83
								}
								position++
								goto l80
							l83:
								position, tokenIndex = position80, tokenIndex80
								if buffer[position] != rune('\r') {
									goto l79
								}
								position++
							}
						l80:
							goto l76
						l79:
							position, tokenIndex = position79, tokenIndex79
						}
						if !matchDot() {
							goto l76
						}
					}
				l77:
					goto l75
				l76:
					position, tokenIndex = position76, tokenIndex76
				}
				if buffer[position] != rune('"') {
					goto l73
				}
				position++
				add(ruleStringLiteral, position74)
			}
			return true
		l73:
			position, tokenIndex = position73, tokenIndex73
			return false
		},
		/* 23 Escape <- <('\\' ('b' / 't' / 'n' / 'f' / 'r' / '"' / '\'' / '\\' / OctalEscape / UnicodeEscape))> */
		func() bool {
			position84, tokenIndex84 := position, tokenIndex
			{
				position85 := position
				if buffer[position] != rune('\\') {
					goto l84
				}
				position++
				{
					position86, tokenIndex86 := position, tokenIndex
					if buffer[position] != rune('b') {
						goto l87
					}
					position++
					goto l86
				l87:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('t') {
						goto l88
					}
					position++
					goto l86
				l88:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('n') {
						goto l89
					}
					position++
					goto l86
				l89:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('f') {
						goto l90
					}
					position++
					goto l86
				l90:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('r') {
						goto l91
					}
					position++
					goto l86
				l91:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('"') {
						goto l92
					}
					position++
					goto l86
				l92:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('\'') {
						goto l93
					}
					position++
					goto l86
				l93:
					position, tokenIndex = position86, tokenIndex86
					if buffer[position] != rune('\\') {
						goto l94
					}
					position++
					goto l86
				l94:
					position, tokenIndex = position86, tokenIndex86
					if !_rules[ruleOctalEscape]() {
						goto l95
					}
					goto l86
				l95:
					position, tokenIndex = position86, tokenIndex86
					if !_rules[ruleUnicodeEscape]() {
						goto l84
					}
				}
			l86:
				add(ruleEscape, position85)
			}
			return true
		l84:
			position, tokenIndex = position84, tokenIndex84
			return false
		},
		/* 24 OctalEscape <- <(([0-3] [0-7] [0-7]) / ([0-7] [0-7]) / [0-7])> */
		func() bool {
			position96, tokenIndex96 := position, tokenIndex
			{
				position97 := position
				{
					position98, tokenIndex98 := position, tokenIndex
					if c := buffer[position]; c < rune('0') || c > rune('3') {
						goto l99
					}
					position++
					if c := buffer[position]; c < rune('0') || c > rune('7') {
						goto l99
					}
					position++
					if c := buffer[position]; c < rune('0') || c > rune('7') {
						goto l99
					}
					position++
					goto l98
				l99:
					position, tokenIndex = position98, tokenIndex98
					if c := buffer[position]; c < rune('0') || c > rune('7') {
						goto l100
					}
					position++
					if c := buffer[position]; c < rune('0') || c > rune('7') {
						goto l100
					}
					position++
					goto l98
				l100:
					position, tokenIndex = position98, tokenIndex98
					if c := buffer[position]; c < rune('0') || c > rune('7') {
						goto l96
					}
					position++
				}
			l98:
				add(ruleOctalEscape, position97)
			}
			return true
		l96:
			position, tokenIndex = position96, tokenIndex96
			return false
		},
		/* 25 UnicodeEscape <- <('u'+ HexDigit HexDigit HexDigit HexDigit)> */
		func() bool {
			position101, tokenIndex101 := position, tokenIndex
			{
				position102 := position
				if buffer[position] != rune('u') {
					goto l101
				}
				position++
			l103:
				{
					position104, tokenIndex104 := position, tokenIndex
					if buffer[position] != rune('u') {
						goto l104
					}
					position++
					goto l103
				l104:
					position, tokenIndex = position104, tokenIndex104
				}
				if !_rules[ruleHexDigit]() {
					goto l101
				}
				if !_rules[ruleHexDigit]() {
					goto l101
				}
				if !_rules[ruleHexDigit]() {
					goto l101
				}
				if !_rules[ruleHexDigit]() {
					goto l101
				}
				add(ruleUnicodeEscape, position102)
			}
			return true
		l101:
